Closed Bug 585083 Opened 14 years ago Closed 14 years ago

Android crash after showing external URI app chooser dialog

Categories

(Firefox for Android Graveyard :: General, defect)

All
Android
defect
Not set
normal

Tracking

(fennec2.0a1+)

VERIFIED FIXED
Tracking Status
fennec 2.0a1+ ---

People

(Reporter: mbrubeck, Assigned: blassey)

Details

Attachments

(1 file)

Steps to reproduce:
1. If you have set a default app for mailto: links, use "Clear defaults" on it in Android's "Manage Applications" settings.
2. Choose "Share Link" from the Fennec site menu, and press the "Email" button.
3. A dialog appears offering to "Complete action" using GMail "Compose" or "Email"
4. When you dismiss the dialog (by pressing back or by choosing an app and then returning to Fennec, Fennec crashes.
tracking-fennec: --- → ?
Attached patch patchSplinter Review
Assignee: nobody → blassey.bugs
Attachment #464325 - Flags: review?(mwu)
Attachment #464325 - Flags: review?(mwu) → review+
tracking-fennec: ? → 2.0a1+
http://hg.mozilla.org/mozilla-central/rev/7bdaf854bb7d
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
verified FIXED on build:
Mozilla/5.0 (Android; U; Linux armv71; en-US; rv:2.0b4pre) Gecko/20100811 Namoroka/4.0b4pre Fennec/2.0a1pre
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: