Bug 585083 - Android crash after showing external URI app chooser dialog r=mwu blocking-fennec=2.0a1+